# rerono

./: .gitignore  README.md  pyproject.toml  rules.yaml
src/rerono/: __init__.py  blocker_addon.py  main.py
tests/: test_rerono.py
