[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rerono"
version = "1.0.0"
description = "Cross-platform URL and domain blocker using local proxying"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
rerono = "rerono.main:main"
